# smart_tailor

./: .gitignore  README.md
code_generator/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
code_generator/server/: __main__.py
code_generator/site_generator/: package-lock.json  package.json
code_generator/templates/app/: package-lock.json  package.json
code_generator/templates/contracts/: hardhat.config.js  package-lock.json  package.json
code_generator/templates/contracts/scripts/: deploy.js
code_generator/worker/: main.py  runner.py
code_generator/worker/editor/: __init__.py  base_editor.py
code_generator/worker/executors/: __init__.py  hardhat_executor.py  react_executor.py
code_generator/worker/prompts/: __init__.py
code_generator/worker/prompts/react_template_builder/: prompt.py
code_generator/worker/prompts/requirements_planner/: prompt.py
code_generator/worker/prompts/solidity_template_builder/: prompt.py
code_generator/worker/prompts/specification_designer/: prompt.py
code_generator/worker/tools/: __init__.py
code_generator/worker/utils/: file.py
web_app/: package-lock.json  package.json
web_app/src/: index.css  index.tsx
web_app/src/pages/project/: Editor.tsx  Footer.tsx  Header.tsx  Loading.tsx  Preview.tsx  index.tsx
web_app/src/pages/root/: index.tsx
